----------
v4.0.0-git
----------

[jan] Allow to edit task list color in traditional view.
[mjr] Tweak display of smartlist links in list view.
[mjr] Fix fatal recursion error when searching with smartlists were present.


-----------
v4.0.0beta1
-----------

[mjr] Add support for smart tasklists.
[mjr] Migrate categories to tags.
[jan] Fix fatal error if the task form doesn't validate.
[jan] Add recurring tasks (Request #2150).


----------
v3.0.9-git
----------

[jan] Fix changing sort direction.
[jan] Fix sorting by owner if displaying external task sources.
[jan] Update Turkish translation (İstanbul Technical University).


------
v3.0.8
------

[jan] Update Swedish translation (Per Olof Ljungmark <peo@bsdlabs.com>).
[jan] Update Italian translation (Massimo Malabotta <mmalabotta@units.it>).
[jan] Update Hungarian translation (Zoltán Németh <nemeth.zoltan@etit.hu>).


------
v3.0.7
------

[jan] Fix setting custom alarm methods (Bug #9543).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


------
v3.0.6
------

[jan] Don't display task details of private tasks via the API (Bug #10712).
[jan] Use correct locale when parsing quick tasks (thpo+horde@dotrc.de, Bug
      #10720).


------
v3.0.5
------

[cjh] Nicer date/time input with fewer input fields and helper javascript.
[mjr] Add ability to choose which tasklists to synchronize.
[mjr] Fix task export to ActiveSync for tasks with no due dates or reminders.


------
v3.0.4
------

[jan] Add missing parameters when PUTing tasks (Bug #10545).
[mjr] Fix removeUserData implementation.
[gwr] Fix Kolab object attribute handling for tasks.
[gwr] Avoid including the owner name into the default share.


------
v3.0.3
------

[jan] Don't load all shares with requested permissions from the backend if
      $conf['share']['hidden'] is enabled.


------
v3.0.2
------

[jan] Add Ukrainian translation (Andriy Kopystyansky <anri@polynet.lviv.ua>).


------
v3.0.1
------
