@@ -37,7 +37,10 @@ class Nag_Form_DeleteTaskList extends Horde_Form
             sprintf(_("Really delete the task list \"%s\"? This cannot be undone and all data on this task list will be permanently removed."),
             $this->_tasklist->get('name')), 'desc', 'description', false
         );
-        $this->setButtons(array(_("Delete"), _("Cancel")));
+        $this->setButtons(array(
+            array('class' => 'horde-delete', 'value' => _("Delete")),
+            array('class' => 'horde-cancel', 'value' => _("Cancel")),
+        ));
     }
 
     public function execute()
